--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mqtt": "^4.3.7",
     "readline-sync": "^1.4.10",
     "request": "^2.88.2",
+    "semver": "^7.5.4",
     "websocket-stream": "^5.5.2"
   }
 }
